<resources>
    <string name="app_name">Password Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="value_Email">Email</string>
    <string name="value_Password">Password</string>
    <string name="button_Login">Login</string>
    <string name="button_NewAccount">Create New Account</string>
    <string name="text_Name">Name</string>
    <string name="text_website">Website</string>
    <string name="button_Submit">Submit</string>
    <string name="button_Cancel">Cancel</string>
    <string name="text_Welcome">Welcome !!</string>
    <string name="button_EditProfile">Edit Profile</string>
    <string name="button_Logout">Log Out</string>
    <string name="String_Genres">Genres</string>
    <string name="strNewContact">New Contact</string>
    <string name="strForumTitle">Forum Title</string>
    <string name="strForumDescription">Forum Description</string>
    <string name="strPost">Post</string>
    <string name="strhintWriteComment">Write Comment</string>
    <string name="button_show">Show</string>
</resources>